# api-template

./: .env-docker.env  .gitignore  .gitlab-ci.yml  Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml
api/: app.py  auth.py  utils.py
common/: settings.py
db_sql/: config.py  env.py  models.py
integration_tests/: conftest.py  test_api_routes_dataset.py  test_health_check.py
service/dataset/: db.py  models.py  routes.py
