[project]
name = "autoplay-api-tempate"
version = "0.1.0"
description = ""
authors = [
    {name = "team@autoplay.ai"}
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "alembic (>=1.17.2,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
