[project]
name = "autoplay-api-tempate"
version = "0.1.0"
description = ""
authors = [
    {name = "team@autoplay.ai"}
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "alembic (>=1.17.2,<2.0.0)",
    "pydantic (>=2.12.5,<3.0.0)",
    "dotenv (>=0.9.9,<0.10.0)",
    "fastapi (>=0.122.0,<0.123.0)",
    "toml (>=0.10.2,<0.11.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
package-mode = false

[dependency-groups]
dev = [
    "pytest (>=9.0.1,<10.0.0)",
    "pytest-asyncio (>=1.3.0,<2.0.0)"
]
